--- a/SimpleSnake/README
+++ b/SimpleSnake/README
@@ -1,4 +1,4 @@
 University project I did a in 2020.
 Simple snake game, no fruits to eat. Snake grows through time. Like a normal snake.
-Made with windows forms, included is the design of the form and the lofic of the game 
+Made with windows forms, included is the design of the form and the logic of the game 
 with hopefully no personal info that was put there as I did have to hand it in.
